Updated Work section with images for the portfolio

--- a/index.html
+++ b/index.html
@@ -25,34 +25,58 @@
             </div>
             <section>
                 <div class="portfolio-row">
-                    <div class="portfolio-title">
+                    <div class="portfolio-row portfolio-title">
                         <h2>About <br> Me</h2>
                     </div>
                     <div class="portfolio-row portfolio-info">
-                        <p>I am a software professional with around 5 years of work experience in developing Siebel CRM applications.</p>
-                    </div>
-                </div>
-                <div><br></div>
-                <div class="portfolio-row">
-                    <div class="portfolio-title">
-                        <h2>Work</h2>
-                    </div>
-                    <div class="portfolio-info">
-                        <figure class="portfolio-work">
-                            <a href="#">
-                                <!-- <img src="Assets/images/Booksnook.jpg" alt="Books in the nook"/> -->
-                            </a>
-                        </figure>
-                        <figure></figure>
-                        <figure></figure>
-                        <figure></figure>
-                        <figure></figure>
+                        <p>I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
+                            <br><br>I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
+                            My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
+                            <br><br>When I am not building cool applications, I spend my time with family or exploring my hobbies. 
+                        </p>
                     </div>
                 </div>
                 <div><br></div>
                 <div class="portfolio-row">
                     <div class="portfolio-row portfolio-title">
-                        <h2>Contact <br> Me</h2>
+                        <h2>Work</h2>
+                    </div>
+                    <div class="portfolio-info">
+                        <div>
+                            <figure>
+                                <a href="#">
+                                    <img src="Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="#">
+                                    <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
+                                </a>
+                            </figure>
+                        </div>
+                        <div>
+                            <figure>
+                                <a href="#">
+                                    <img src="Assets/images/RPS.png" alt="Rock Paper Scissors" class="portfolio-images"/>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="#">
+                                    <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
+                                </a>
+                            </figure>
+                            <figure>
+                                <a href="#">
+                                    <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
+                                </a>
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+                <div><br></div>
+                <div class="portfolio-row">
+                    <div class="portfolio-row portfolio-title">
+                        <h2>Contact<br>Me</h2>
                     </div>
                     <div class="portfolio-row portfolio-info">
                         <ul class="portfolio-row portfolio-contact">
@@ -67,7 +91,7 @@
                 <div><br></div>
             </section>
         </main>
-
+        <div><br></div>
         <footer>
             Thank you for visiting!
         </footer>
