--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
            <h1>Priyanka Dhende</h1>
            <nav>
                <ul>
-                   <li><a href="#">About Me</a></li>
-                   <li><a href="#">Work</a></li>
-                   <li><a href="#">Contact Me</a></li>
+                   <li><a href="#about-me">About Me</a></li>
+                   <li><a href="#Work">Work</a></li>
+                   <li><a href="#contact-me">Contact Me</a></li>
                    <li><a href="#">Resume</a></li>
                </ul>
            </nav>
@@ -22,14 +22,17 @@
                 <div class="portfolio-img">
                     <img src="Assets/images/profile_pic.jpeg" id="profile" class="portfolio-intro" alt="Priyanka Dhende"/>
                 </div>
+                <!-- <div>
+                    <p>Full-Stack Web Developer</p>
+                </div> -->
             </div>
             <section>
                 <div class="portfolio-row">
-                    <div class="portfolio-row portfolio-title">
+                    <div id="about-me" class="portfolio-row portfolio-title">
                         <h2>About <br> Me</h2>
                     </div>
                     <div class="portfolio-row portfolio-info">
-                        <p>I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
+                        <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
                             <br><br>I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
                             My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
                             <br><br>When I am not building cool applications, I spend my time with family or exploring my hobbies. 
@@ -38,7 +41,7 @@
                 </div>
                 <div><br></div>
                 <div class="portfolio-row">
-                    <div class="portfolio-row portfolio-title">
+                    <div id="Work" class="portfolio-row portfolio-title">
                         <h2>Work</h2>
                     </div>
                     <div class="portfolio-info">
@@ -46,11 +49,13 @@
                             <figure>
                                 <a href="#">
                                     <img src="Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
+                                    <h3 class="portfolio-heading">Books Nooks</h3>
                                 </a>
                             </figure>
                             <figure>
                                 <a href="#">
                                     <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
+                                    <h3 class="portfolio-heading">Grocery Calculator</h3>
                                 </a>
                             </figure>
                         </div>
@@ -58,16 +63,19 @@
                             <figure>
                                 <a href="#">
                                     <img src="Assets/images/RPS.png" alt="Rock Paper Scissors" class="portfolio-images"/>
+                                    <h3 class="portfolio-heading">Rock Paper Scissors</h3>
                                 </a>
                             </figure>
                             <figure>
                                 <a href="#">
                                     <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
+                                    <h3 class="portfolio-heading">Run Buddy</h3>
                                 </a>
                             </figure>
                             <figure>
                                 <a href="#">
                                     <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
+                                    <h3 class="portfolio-heading">Travelogues</h3>
                                 </a>
                             </figure>
                         </div>
@@ -75,7 +83,7 @@
                 </div>
                 <div><br></div>
                 <div class="portfolio-row">
-                    <div class="portfolio-row portfolio-title">
+                    <div id="contact-me" class="portfolio-row portfolio-title">
                         <h2>Contact<br>Me</h2>
                     </div>
                     <div class="portfolio-row portfolio-info">
@@ -93,7 +101,8 @@
         </main>
         <div><br></div>
         <footer>
-            Thank you for visiting!
+            <h5>Thank you for visiting!</h5>
+            <h6>&#169; Priyanka D</h6>
         </footer>
     </body>
 </html>
