Updated the contact me links and added an href value to 2 projects in Work section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Priyanka Dhende Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./Assets/css/styles.css">
     </head>
 
@@ -33,27 +34,26 @@
                     </div>
                     <div class="portfolio-row portfolio-info">
                         <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
-                            <br><br>I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
+                            I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
                             My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
-                            <br><br>When I am not building cool applications, I spend my time with family or exploring my hobbies. 
+                            When I am not building cool applications, I spend my time with family or exploring my hobbies. 
                         </p>
                     </div>
                 </div>
-                <div><br></div>
                 <div class="portfolio-row">
                     <div id="Work" class="portfolio-row portfolio-title">
                         <h2>Work</h2>
                     </div>
-                    <div class="portfolio-info">
+                    <div class="portfolio-row portfolio-info">
                         <div>
                             <figure>
-                                <a href="#">
+                                <a href="https://pdhende.github.io/prework-about-me/" target="_blank">
                                     <img src="Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
                                     <h3 class="portfolio-heading">Books Nooks</h3>
                                 </a>
                             </figure>
                             <figure>
-                                <a href="#">
+                                <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank">
                                     <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
                                     <h3 class="portfolio-heading">Grocery Calculator</h3>
                                 </a>
@@ -81,7 +81,6 @@
                         </div>
                     </div>
                 </div>
-                <div><br></div>
                 <div class="portfolio-row">
                     <div id="contact-me" class="portfolio-row portfolio-title">
                         <h2>Contact<br>Me</h2>
@@ -90,16 +89,14 @@
                         <ul class="portfolio-row portfolio-contact">
                             <li><a href="#">555.555.5555</a></li>
                             <li><a href="#">priyavdhende@gmail.com</a></li>
-                            <li><a href="#">GitHub</a></li>
-                            <li><a href="#">LinkedIn</a></li>
+                            <li><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
+                            <li><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
                             <li><a href="#">Twitter</a></li>
                         </ul>
                     </div>
                 </div>
-                <div><br></div>
             </section>
         </main>
-        <div><br></div>
         <footer>
             <h5>Thank you for visiting!</h5>
             <h6>&#169; Priyanka D</h6>
