Added media queries and adjusted the images in the work section

--- a/index.html
+++ b/index.html
@@ -45,40 +45,36 @@
                         <h2>Work</h2>
                     </div>
                     <div class="portfolio-row portfolio-info">
-                        <div>
-                            <figure>
-                                <a href="https://pdhende.github.io/prework-about-me/" target="_blank">
-                                    <img src="Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
-                                    <h3 class="portfolio-heading">Books Nooks</h3>
-                                </a>
-                            </figure>
-                            <figure>
-                                <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank">
-                                    <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
-                                    <h3 class="portfolio-heading">Grocery Calculator</h3>
-                                </a>
-                            </figure>
-                        </div>
-                        <div>
-                            <figure>
-                                <a href="#">
-                                    <img src="Assets/images/RPS.png" alt="Rock Paper Scissors" class="portfolio-images"/>
-                                    <h3 class="portfolio-heading">Rock Paper Scissors</h3>
-                                </a>
-                            </figure>
-                            <figure>
-                                <a href="#">
-                                    <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
-                                    <h3 class="portfolio-heading">Run Buddy</h3>
-                                </a>
-                            </figure>
-                            <figure>
-                                <a href="#">
-                                    <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
-                                    <h3 class="portfolio-heading">Travelogues</h3>
-                                </a>
-                            </figure>
-                        </div>
+                        <figure class="portfolio-main-app">
+                            <a href="https://pdhende.github.io/prework-about-me/" target="_blank" class="portfolio-main-app">
+                                <img src="./Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Books Nooks</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Grocery Calculator</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/RPS.png" alt="Rock Paper Scissors" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Rock Paper Scissors</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Run Buddy</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Travelogues</h3>
+                            </a>
+                        </figure>
                     </div>
                 </div>
                 <div class="portfolio-row">
