Added subtitle to the header and comments to html and css files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <!-- Header -->
         <header>
            <h1>Priyanka Dhende</h1>
            <nav>
@@ -19,15 +20,15 @@
            </nav>
         </header>
         <main>
-            <div class="portfolio-intro">
+            <!-- Background image -->
+            <div>
                 <div class="portfolio-img">
-                    <img src="Assets/images/profile_pic.jpeg" id="profile" class="portfolio-intro" alt="Priyanka Dhende"/>
+                    <img src="Assets/images/profile_pic.jpeg" id="profile" alt="Priyanka Dhende"/>
+                    <p class="portfolio-intro">Full-Stack Web Developer</p>
                 </div>
-                <!-- <div>
-                    <p>Full-Stack Web Developer</p>
-                </div> -->
             </div>
             <section>
+                <!-- About Me section-->
                 <div class="portfolio-row">
                     <div id="about-me" class="portfolio-row portfolio-title">
                         <h2>About <br> Me</h2>
@@ -40,6 +41,7 @@
                         </p>
                     </div>
                 </div>
+                <!-- Work section-->
                 <div class="portfolio-row">
                     <div id="Work" class="portfolio-row portfolio-title">
                         <h2>Work</h2>
@@ -77,6 +79,7 @@
                         </figure>
                     </div>
                 </div>
+                <!-- Contact section -->
                 <div class="portfolio-row">
                     <div id="contact-me" class="portfolio-row portfolio-title">
                         <h2>Contact<br>Me</h2>
@@ -93,6 +96,7 @@
                 </div>
             </section>
         </main>
+        <!-- Footer -->
         <footer>
             <h5>Thank you for visiting!</h5>
             <h6>&#169; Priyanka D</h6>
