--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Priyanka Dhende Portfolio</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="./Assets/css/styles.css">
+        <title>Priyanka Dhende Portfolio</title>
     </head>
 
     <body>
         <!-- Header -->
         <header>
            <h1>Priyanka Dhende</h1>
-           <nav>
+           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#about-me">About Me </a> 
+                <a class="nav-item nav-link" href="#Work">Work</a>
+                <a class="nav-item nav-link" href="#contact-me">Contact Me</a>
+                <a class="nav-item nav-link disabled" href="#">Resume</a>
+              </div>
+            </div>
+          </nav>
+           <!-- <nav>
                <ul>
                    <li><a href="#about-me">About Me</a></li>
                    <li><a href="#Work">Work</a></li>
                    <li><a href="#contact-me">Contact Me</a></li>
                    <li><a href="#">Resume</a></li>
                </ul>
-           </nav>
+           </nav> -->
         </header>
         <main>
             <!-- Background image -->
@@ -101,5 +120,19 @@
             <h5>Thank you for visiting!</h5>
             <h6>&#169; Priyanka D</h6>
         </footer>
+        <!-- scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+            integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://kit.fontawesome.com/33d1c7835e.js" crossorigin="anonymous"></script>
     </body>
 </html>
