--- a/index.html
+++ b/index.html
@@ -12,38 +12,35 @@
     </head>
 
     <body>
-        <!-- Header -->
-        <header>
-           <h1>Priyanka Dhende</h1>
-           <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-lg fixed-top w-100">
+            <a class="navbar-brand font-weight-bold" href="#">Priyanka Dhende</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#about-me">About Me </a> 
-                <a class="nav-item nav-link" href="#Work">Work</a>
-                <a class="nav-item nav-link" href="#contact-me">Contact Me</a>
-                <a class="nav-item nav-link disabled" href="#">Resume</a>
-              </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#about-me">About Me </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Work">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact-me">Contact Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Resume</a>
+                </li>
+                </ul>
             </div>
-          </nav>
-           <!-- <nav>
-               <ul>
-                   <li><a href="#about-me">About Me</a></li>
-                   <li><a href="#Work">Work</a></li>
-                   <li><a href="#contact-me">Contact Me</a></li>
-                   <li><a href="#">Resume</a></li>
-               </ul>
-           </nav> -->
-        </header>
+        </nav>
         <main>
             <!-- Background image -->
-            <div>
-                <div class="portfolio-img">
-                    <img src="Assets/images/profile_pic.jpeg" id="profile" alt="Priyanka Dhende"/>
-                    <p class="portfolio-intro">Full-Stack Web Developer</p>
+            <div class="jumbotron jumbotron-fluid portfolio-img">
+                <div class="container">
+                  <!-- <h1 class="display-5">Priyanka Dhende</h1> -->
+                  <img src="Assets/images/profile_pic.jpeg" id="profile" alt="Priyanka Dhende"/>
+                  <p class="lead portfolio-intro">Full-Stack Web Developer</p>
                 </div>
             </div>
             <section>
