Updated index.html and CSS to style jumbotron headings

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg fixed-top w-100">
-            <a class="navbar-brand font-weight-bold" href="#">Priyanka Dhende</a>
+        <nav class="navbar navbar-expand-lg w-100">
+            <!-- <a class="navbar-brand font-weight-bold" href="#">Priyanka Dhende</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,8 +38,8 @@
             <!-- Background image -->
             <div class="jumbotron jumbotron-fluid portfolio-img">
                 <div class="container">
-                  <!-- <h1 class="display-5">Priyanka Dhende</h1> -->
                   <img src="Assets/images/profile_pic.jpeg" id="profile" alt="Priyanka Dhende"/>
+                  <h1 class="display-5">Priyanka Dhende</h1>
                   <p class="lead portfolio-intro">Full-Stack Web Developer</p>
                 </div>
             </div>
