Updated index.html to include rows and columns

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg w-100">
+        <nav class="navbar navbar-dark navbar-expand-lg w-100">
             <!-- <a class="navbar-brand font-weight-bold" href="#">Priyanka Dhende</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#about-me">About Me </a>
                 </li>
@@ -44,8 +44,17 @@
                 </div>
             </div>
             <section>
+                <div class="row">
+                    <div id="about-me" class="portfolio-row portfolio-title col-lg-3 col-md-3 col-sm-3"><h2>About Me</h2></div>
+                    <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
+                        <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
+                            I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
+                            My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
+                            When I am not building cool applications, I spend my time with family or exploring my hobbies. 
+                        </p>
+                    </div>
                 <!-- About Me section-->
-                <div class="portfolio-row">
+                <!-- <div class="portfolio-row">
                     <div id="about-me" class="portfolio-row portfolio-title">
                         <h2>About <br> Me</h2>
                     </div>
@@ -56,9 +65,9 @@
                             When I am not building cool applications, I spend my time with family or exploring my hobbies. 
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <!-- Work section-->
-                <div class="portfolio-row">
+                <!-- <div class="portfolio-row">
                     <div id="Work" class="portfolio-row portfolio-title">
                         <h2>Work</h2>
                     </div>
@@ -94,9 +103,9 @@
                             </a>
                         </figure>
                     </div>
-                </div>
+                </div> -->
                 <!-- Contact section -->
-                <div class="portfolio-row">
+                <!-- <div class="portfolio-row">
                     <div id="contact-me" class="portfolio-row portfolio-title">
                         <h2>Contact<br>Me</h2>
                     </div>
@@ -109,7 +118,7 @@
                             <li><a href="#">Twitter</a></li>
                         </ul>
                     </div>
-                </div>
+                </div> -->
             </section>
         </main>
         <!-- Footer -->
