--- a/index.html
+++ b/index.html
@@ -45,14 +45,50 @@
             </div>
             <section>
                 <div class="row">
-                    <div id="about-me" class="portfolio-row portfolio-title col-lg-3 col-md-3 col-sm-3"><h2>About Me</h2></div>
-                    <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
+                    <div id="about-me" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>About Me</h2></div>
+                    <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
                         <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
                             I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
                             My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
                             When I am not building cool applications, I spend my time with family or exploring my hobbies. 
                         </p>
                     </div>
+                </div>
+                <div class="row">
+                    <div id="Work" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Work</h2></div>
+                    <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
+                        <figure class="portfolio-main-app">
+                            <a href="https://pdhende.github.io/prework-about-me/" target="_blank" class="portfolio-main-app">
+                                <img src="./Assets/images/gourmet_guru.jpg" alt="Burger with fries" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Gourmet Guru</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/weather.jpg" alt="Weather Dashboard" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Weather Dashboard</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/quiz.jpg" alt="Code Quiz" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Code Quiz</h3>
+                            </a>
+                        </figure>
+                        <!-- <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Run Buddy</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="#" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Travelogues</h3>
+                            </a>
+                        </figure> -->
+                    </div>
+                </div>
                 <!-- About Me section-->
                 <!-- <div class="portfolio-row">
                     <div id="about-me" class="portfolio-row portfolio-title">
