Updated index.html to include links to deployed projects

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                     <div id="Work" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Work</h2></div>
                     <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
                         <figure class="portfolio-main-app">
-                            <a href="https://pdhende.github.io/prework-about-me/" target="_blank" class="portfolio-main-app">
+                            <a href="http://www.mitchelwachtel.me/gourmet-guru/" target="_blank" class="portfolio-main-app">
                                 <img src="./Assets/images/gourmet_guru.jpg" alt="Burger with fries" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Gourmet Guru</h3>
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
-                            <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank" class="portfolio-secondary-app-a">
+                            <a href="https://pdhende.github.io/weather-dashboard/" target="_blank" class="portfolio-secondary-app-a">
                                 <img src="Assets/images/weather.jpg" alt="Weather Dashboard" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Weather Dashboard</h3>
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
+                            <a href="https://pdhende.github.io/code-quiz/" target="_blank" class="portfolio-secondary-app-a">
                                 <img src="Assets/images/quiz.jpg" alt="Code Quiz" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Code Quiz</h3>
                             </a>
