Updated index.html to include contact details

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
                         <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
                             I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
-                            My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
+                            My work is a reflection of my expertise in HTML, CSS, Javascript, Bootstrap, API's and Node.js. 
                             When I am not building cool applications, I spend my time with family or exploring my hobbies. 
                         </p>
                     </div>
@@ -75,18 +75,16 @@
                                 <h3 class="portfolio-heading">Code Quiz</h3>
                             </a>
                         </figure>
-                        <!-- <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Run Buddy</h3>
-                            </a>
-                        </figure>
-                        <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Travelogues</h3>
-                            </a>
-                        </figure> -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="contact-me" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Contact Me</h2></div>
+                    <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
+                        <ul class="portfolio-contact">
+                            <li><a href="#">pdhendework@gmail.com</a></li>
+                            <li><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
+                            <li><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
+                        </ul>
                     </div>
                 </div>
                 <!-- About Me section-->
