Updated index.html and style.css to style the project titles

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 <div class="row">
                     <div id="contact-me" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Contact Me</h2></div>
                     <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
-                        <ul class="portfolio-contact">
-                            <li><a href="#">pdhendework@gmail.com</a></li>
-                            <li><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
-                            <li><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
+                        <ul class="portfolio-contact d-flex">
+                            <li class="p-3"><a href="#">pdhendework@gmail.com</a></li>
+                            <li class="p-3"><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
+                            <li class="p-3"><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
                         </ul>
                     </div>
                 </div>
