Updated resume link and added resume, updated media queries in css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="#contact-me">Contact Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="Priyanka_Dhende.pdf"  target="_blank">Resume</a>
                 </li>
                 </ul>
             </div>
