Updated HTML and css files to make UI responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <body>
         <nav class="navbar navbar-dark navbar-expand-lg w-100">
-            <!-- <a class="navbar-brand font-weight-bold" href="#">Priyanka Dhende</a> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,9 +43,10 @@
                 </div>
             </div>
             <section>
+                <!-- About Me section-->
                 <div class="row">
                     <div id="about-me" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>About Me</h2></div>
-                    <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
+                    <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
                         <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
                             I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
                             My work is a reflection of my expertise in HTML, CSS, Javascript, Bootstrap, API's and Node.js. 
@@ -54,6 +54,7 @@
                         </p>
                     </div>
                 </div>
+                <!-- Work section-->
                 <div class="row">
                     <div id="Work" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Work</h2></div>
                     <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
@@ -77,82 +78,17 @@
                         </figure>
                     </div>
                 </div>
+                <!-- Contact section -->
                 <div class="row">
                     <div id="contact-me" class="portfolio-row portfolio-title col-lg-2 col-md-2 col-sm-2"><h2>Contact Me</h2></div>
-                    <div class="col-lg-10 col-md-10 col-sm-10 portfolio-row portfolio-info">
-                        <ul class="portfolio-contact d-flex">
-                            <li class="p-3"><a href="#">pdhendework@gmail.com</a></li>
-                            <li class="p-3"><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
-                            <li class="p-3"><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
+                    <div class="col-lg-10 col-md-8 col-sm-6 portfolio-row portfolio-info">
+                        <ul class="portfolio-contact">
+                            <li class="portfolio-links"><a href="#">pdhendework@gmail.com</a></li>
+                            <li class="portfolio-links"><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
+                            <li class="portfolio-links"><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
                         </ul>
                     </div>
                 </div>
-                <!-- About Me section-->
-                <!-- <div class="portfolio-row">
-                    <div id="about-me" class="portfolio-row portfolio-title">
-                        <h2>About <br> Me</h2>
-                    </div>
-                    <div class="portfolio-row portfolio-info">
-                        <p class="portfolio-para">I am a software professional with around 5 years of work experience in developing Siebel CRM applications.
-                            I wanted to use my imagination and creativity to build versatile web applications. So I took up the challenge to hone my skills and build user friendly and functional portals.
-                            My work is a reflection of my expertise in HTML, CSS, Javascript, React and Node.js. 
-                            When I am not building cool applications, I spend my time with family or exploring my hobbies. 
-                        </p>
-                    </div>
-                </div> -->
-                <!-- Work section-->
-                <!-- <div class="portfolio-row">
-                    <div id="Work" class="portfolio-row portfolio-title">
-                        <h2>Work</h2>
-                    </div>
-                    <div class="portfolio-row portfolio-info">
-                        <figure class="portfolio-main-app">
-                            <a href="https://pdhende.github.io/prework-about-me/" target="_blank" class="portfolio-main-app">
-                                <img src="./Assets/images/Booksnook.jpg" alt="Books in the nook" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Books Nooks</h3>
-                            </a>
-                        </figure>
-                        <figure class="portfolio-secondary-app">
-                            <a href="https://pdhende.github.io/html-git-css-hw/" target="_blank" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/Grocery.jpg" alt="Grocery" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Grocery Calculator</h3>
-                            </a>
-                        </figure>
-                        <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/RPS.png" alt="Rock Paper Scissors" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Rock Paper Scissors</h3>
-                            </a>
-                        </figure>
-                        <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/RunBuddy.jpg" alt="Runners" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Run Buddy</h3>
-                            </a>
-                        </figure>
-                        <figure class="portfolio-secondary-app">
-                            <a href="#" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/Travels.jpg" alt="Travel" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Travelogues</h3>
-                            </a>
-                        </figure>
-                    </div>
-                </div> -->
-                <!-- Contact section -->
-                <!-- <div class="portfolio-row">
-                    <div id="contact-me" class="portfolio-row portfolio-title">
-                        <h2>Contact<br>Me</h2>
-                    </div>
-                    <div class="portfolio-row portfolio-info">
-                        <ul class="portfolio-row portfolio-contact">
-                            <li><a href="#">555.555.5555</a></li>
-                            <li><a href="#">priyavdhende@gmail.com</a></li>
-                            <li><a href="https://github.com/pdhende" target="_blank">GitHub</a></li>
-                            <li><a href="https://www.linkedin.com/in/priyanka-dhende-b827296/" target="_blank">LinkedIn</a></li>
-                            <li><a href="#">Twitter</a></li>
-                        </ul>
-                    </div>
-                </div> -->
             </section>
         </main>
         <!-- Footer -->
