--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
                     <div class="col-lg-9 col-md-9 col-sm-9 portfolio-row portfolio-info">
                         <figure class="portfolio-main-app">
                             <a href="http://www.mitchelwachtel.me/gourmet-guru/" target="_blank" class="portfolio-main-app">
-                                <img src="./Assets/images/gourmet_guru.jpg" alt="Burger with fries" class="portfolio-images"/>
+                                <img src="./Assets/images/gourmet_guru.jpg" alt="Burger with fries" class="portfolio-images portfolio-imag-main"/>
                                 <h3 class="portfolio-heading">Gourmet Guru</h3>
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
                             <a href="https://pdhende.github.io/weather-dashboard/" target="_blank" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/weather.jpg" alt="Weather Dashboard" class="portfolio-images"/>
+                                <img src="Assets/images/Weather_dashboard.jpeg" alt="Weather Dashboard" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Weather Dashboard</h3>
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
                             <a href="https://pdhende.github.io/code-quiz/" target="_blank" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/quiz.jpg" alt="Code Quiz" class="portfolio-images"/>
+                                <img src="Assets/images/Code_Quiz.jpeg" alt="Code Quiz" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Code Quiz</h3>
                             </a>
                         </figure>
