Updated portfolio to include new projects and updated resume

--- a/index.html
+++ b/index.html
@@ -65,15 +65,21 @@
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
-                            <a href="https://pdhende.github.io/weather-dashboard/" target="_blank" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/Weather_dashboard.jpeg" alt="Weather Dashboard" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Weather Dashboard</h3>
+                            <a href="https://github.com/dpatel615/WellCome" target="_blank" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Wellcome.png" alt="Wellcome" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Wellcome</h3>
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
-                            <a href="https://pdhende.github.io/code-quiz/" target="_blank" class="portfolio-secondary-app-a">
-                                <img src="Assets/images/Code_Quiz.jpeg" alt="Code Quiz" class="portfolio-images"/>
-                                <h3 class="portfolio-heading">Code Quiz</h3>
+                            <a href="https://github.com/pdhende/team-profile-generator" target="_blank" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Team_generator.png" alt="Team Generator" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Team Profile Generator</h3>
+                            </a>
+                        </figure>
+                        <figure class="portfolio-secondary-app">
+                            <a href="https://pdhende.github.io/weather-dashboard/" target="_blank" class="portfolio-secondary-app-a">
+                                <img src="Assets/images/Weather_dashboard.jpeg" alt="Weather Dashboard" class="portfolio-images"/>
+                                <h3 class="portfolio-heading">Weather Dashboard</h3>
                             </a>
                         </figure>
                     </div>
