Updated project links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             </a>
                         </figure>
                         <figure class="portfolio-secondary-app">
-                            <a href="https://github.com/dpatel615/WellCome" target="_blank" class="portfolio-secondary-app-a">
+                            <a href="https://wellcome-gtbc.herokuapp.com/" target="_blank" class="portfolio-secondary-app-a">
                                 <img src="Assets/images/Wellcome.png" alt="Wellcome" class="portfolio-images"/>
                                 <h3 class="portfolio-heading">Wellcome</h3>
                             </a>
